--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -23,7 +23,7 @@ $color-linkedin: #0077b5;
 $color-reddit: #ff4500;
 
 // Typographic
-$typographic-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+$typographic-font-family: 'Zilla Slab', serif;
 
 $typographic-root-font-size: 100;
 $typographic-base-font-size: 16px;
