behavioral interview and typography change

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -23,7 +23,7 @@ $color-linkedin: #0077b5;
 $color-reddit: #ff4500;
 
 // Typographic
-$typographic-font-family: 'Montserrat', sans-serif;
+$typographic-font-family:  'Open Sans', sans-serif;
 
 $typographic-root-font-size: 100;
 $typographic-base-font-size: 16px;
