--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,18 +3,21 @@
  */
 
 // Colors
-$color-base: #222;
-$color-primary: #164BC5;
-$color-secondary: #0F9640;
+$color-base: #f0ece2;
+$color-primary: #eb4559;
+$color-secondary: #b9ebcc;
+
+$color-dark: #010101;
+
+$color-primary-light: lighten($color-primary, 80%);
 
 $color-white: #FFF;
-$color-gray: lighten($color-base, 35%);
-$color-gray-shadow: lighten($color-base, 60%);
-$color-gray-light-shadow: lighten($color-base, 70%);
+$color-gray: $color-base;
+$color-gray-shadow: lighten($color-dark, 60%);
+$color-gray-light-shadow: $color-primary-light;
 $color-gray-border: lighten($color-base, 77%);
-$color-gray-bg: lighten($color-base, 82%);
+$color-gray-bg: lighten($color-dark, 10%);
 
-$color-primary-light: lighten($color-primary, 50%);
 
 $color-hn: #ff6600;
 $color-facebook: #3b5998;
@@ -32,7 +35,7 @@ $typographic-small-font-size: 14px;
 $typographic-base-line-height: 1.625;
 
 $typographic-base-font-color: $color-base;
-$typographic-light-font-color: $color-gray;
+$typographic-light-font-color: #010101;
 $typographic-link-p-font-color: $color-primary;
 $typographic-link-s-font-color: $color-secondary;
 
