--- a/src/components/NavHeader/NavHeader.module.scss
+++ b/src/components/NavHeader/NavHeader.module.scss
@@ -4,10 +4,11 @@
 .header {
   width: 100%;
   height: 60px;
-  background: white;
+  background: #f0ece2;
   box-shadow: 0 4px 15px $color-gray-bg;
   display: flex;
   flex-direction: row;
+  background-color: #010101;
 
   // Needed to stay above the popup
   position: relative;
