burger menu color

--- a/src/components/NavHeader/NavHeader.module.scss
+++ b/src/components/NavHeader/NavHeader.module.scss
@@ -56,10 +56,10 @@
     top: 8px;
     left: 8px;
     padding: 8px;
-    background-color: transparent;
+    background-color: white;
 
     &:hover {
-      background-color: transparent;
+      background-color: white;
     }
 
     &.open {
