--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -22,7 +22,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: $typographic-font-family;
   font-weight: 600;
-  
+  color: cadetblue;
 }
 
 h1 {
@@ -37,6 +37,7 @@ h2 {
   @include line-height(1.5);
   @include margin-top(1.5);
   @include margin-bottom(.5);
+
   
 }
 
