--- a/src/components/ContentDate/ContentDate.module.scss
+++ b/src/components/ContentDate/ContentDate.module.scss
@@ -9,6 +9,6 @@
 
   .date-modified {
     font-weight: 500;
-    color: $typographic-light-font-color;
+    color: $color-gray-light-shadow;
   }
 }
