--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -36,7 +36,7 @@ $typographic-small-font-size: 14px;
 $typographic-base-line-height: 1.625;
 
 $typographic-base-font-color: $color-base;
-$typographic-light-font-color: $color-primary-light;
+$typographic-light-font-color: cadetblue;
 $typographic-link-p-font-color: $color-primary;
 $typographic-link-s-font-color: $color-secondary;
 
