--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -17,7 +17,7 @@
 
       &:hover,
       &:focus {
-        color: $color-secondary;
+        color: $blue-that-is-white;
       }
 
       &--disable {
@@ -38,7 +38,7 @@
 
       &:hover,
       &:focus {
-        color: $color-secondary;
+        color: $blue-that-is-white;
       }
 
       &--disable {
