--- a/src/components/Post/Tags/Tags.module.scss
+++ b/src/components/Post/Tags/Tags.module.scss
@@ -33,7 +33,7 @@
         color: $color-base;
 
         &:hover, &:focus {
-          color: $color-secondary;
+          color: $blue-that-is-white;
         }
       }
     }
