--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,10 +3,9 @@
  */
 
 // Colors
-$color-base: #f0ece2;
-$color-primary: #eb4559;
-$color-secondary: #b9ebcc;
-$color-cadet-blue: cadetblue;
+$color-base: #FFFAF0;
+$color-primary: rgb(247, 165, 132);
+$color-secondary: rgb(180, 226, 255);
 
 $color-dark: #010101;
 
@@ -25,6 +24,8 @@ $color-facebook: #3b5998;
 $color-twitter: #1da1f2;
 $color-linkedin: #0077b5;
 $color-reddit: #ff4500;
+$blue-that-is-white: rgb(180, 226, 255);
+$light-salmon-that-booper-likes:rgb(247, 165, 132);
 
 // Typographic
 $typographic-font-family:  'Open Sans', sans-serif;
@@ -36,9 +37,8 @@ $typographic-small-font-size: 14px;
 $typographic-base-line-height: 1.625;
 
 $typographic-base-font-color: $color-base;
-$typographic-light-font-color: cadetblue;
 $typographic-link-p-font-color: $color-primary;
-$typographic-link-s-font-color: $color-secondary;
+$typographic-link-s-font-color: $blue-that-is-white;
 
 $typographic-leading: round(16 * ($typographic-root-font-size / 100) * $typographic-base-line-height);
 
