--- a/src/components/SubscribeForm/SubscribeForm.module.scss
+++ b/src/components/SubscribeForm/SubscribeForm.module.scss
@@ -70,7 +70,7 @@
     @include transition(background-color);
 
     &:hover {
-      background-color: $color-secondary;
+      background-color: $blue-that-is-white;
       cursor: pointer;
     }
 
