--- a/src/components/SubscribePopup/SubscribePopup.module.scss
+++ b/src/components/SubscribePopup/SubscribePopup.module.scss
@@ -35,7 +35,7 @@
     top: 3px;
     right: 3px;
     background-color: transparent;
-    color: black;
+    color: white;
     padding: 5px;
     margin: 0;
     @include transition(text-shadow);
